@@ -16,19 +16,19 @@ import java.util.Iterator;
 import java.util.List;
 
 /**
- * This represents an immutable path between two cartesian coordinate points, particularly
+ * This represents an immutable path between two elements of type T, particularly
  * Path#getStart() and Path#getEnd(). Also contains a cached
  * version of the total cost along this path, for efficient repeated access.
  */
-public class Path implements Iterable<Path.Segment> {
+public class Path<T> implements Iterable<Path<T>.Segment> {
 
     // AF(this) =
-    //      first point in the path => start
-    //      each "step" along the path between points => elements of list path, where
-    //          path.get(0) is the first step from the start point to an intermediate point, and
-    //          path.get(path.size() - 1) is the final step from an intermediate point to the end
+    //      first T in the path => start
+    //      each "step" along the path between T => elements of list path, where
+    //          path.get(0) is the first step from the starting T to an intermediate T, and
+    //          path.get(path.size() - 1) is the final step from an intermediate T to the end
     //      total cost along the path => cost
-    //      the destination point in this path, opposite the start point => getEnd()
+    //      the destination T in this path, opposite the starting T => getEnd()
 
     // Rep Invariant:
     //      cost >= 0 &&
@@ -43,22 +43,22 @@ public class Path implements Iterable<Path.Segment> {
     private double cost;
 
     /**
-     * The point at the beginning of this path.
+     * The T at the beginning of this path.
      */
-    private Point start;
+    private T start;
 
     /**
-     * The ordered sequence of segments representing a path between points.
+     * The ordered sequence of segments representing a path between elements of T.
      */
     private List<Segment> path;
 
     /**
-     * Creates a new, empty path containing a start point. Essentially this represents a path
-     * from the start point to itself with a total cost of "0".
+     * Creates a new, empty path containing a starting point. Essentially this represents a path
+     * from the starting point to itself with a total cost of "0".
      *
      * @param start The starting point of the path.
      */
-    public Path(Point start) {
+    public Path(T start) {
         this.start = start;
         this.cost = 0;
         this.path = new ArrayList<>();
@@ -66,17 +66,17 @@ public class Path implements Iterable<Path.Segment> {
     }
 
     /**
-     * Appends a new single segment to the end of this path, originating at the current last point
+     * Appends a new single segment to the end of this path, originating at the current last element
      * in this path and terminating at {@code newEnd}. The cost of adding this additional segment
      * to the existing path is {@code segmentCost}. Thus, the returned Path represents a path
      * from {@code this.getStart()} to {@code newEnd}, with a cost of {@code this.getCost() +
      * segmentCost}.
      *
-     * @param newEnd      The point being added at the end of the segment being appended to this path
+     * @param newEnd      The element being added at the end of the segment being appended to this path
      * @param segmentCost The cost of the segment being added to the end of this path.
      * @return A new path representing the current path with the given segment appended to the end.
      */
-    public Path extend(Point newEnd, double segmentCost) {
+    public Path extend(T newEnd, double segmentCost) {
         checkRep();
         //
         Path extendedPath = new Path(start);
@@ -98,17 +98,17 @@ public class Path implements Iterable<Path.Segment> {
     }
 
     /**
-     * @return The point at the beginning of this path.
+     * @return The T at the beginning of this path.
      */
-    public Point getStart() {
+    public T getStart() {
         return start;
     }
 
     /**
-     * @return The point at the end of this path, which may be the start point if this path
-     * contains no segments (i.e. this path is from the start point to itself).
+     * @return The T at the end of this path, which may be the starting point if this path
+     * contains no segments (i.e. this path is from the starting point to itself).
      */
-    public Point getEnd() {
+    public T getEnd() {
         if(path.size() == 0) {
             return start;
         }
@@ -117,8 +117,8 @@ public class Path implements Iterable<Path.Segment> {
 
     /**
      * @return An iterator of the segments in this path, in order, beginning from the starting
-     * point and ending at the end point. In the case that this path represents a path between
-     * the start point and itself, this iterator contains no elements. This iterator does not
+     * T and ending at the ending T. In the case that this path represents a path between
+     * the start and itself, this iterator contains no elements. This iterator does not
      * support the optional Iterator#remove() operation and will throw an
      * UnsupportedOperationException if Iterator#remove() is called.
      */
@@ -163,7 +163,7 @@ public class Path implements Iterable<Path.Segment> {
     /**
      * Checks this path for equality with another object. Two paths are equal if and only if
      * they contain exactly the same sequence of segments in the same order. In the case that
-     * both paths are empty, they are only equal if their starting point is equal.
+     * both paths are empty, they are only equal if their starting T is equal.
      *
      * @param obj The object to compare with {@code this}.
      * @return {@literal true} if and only if {@code obj} is equal to {@code this}.
@@ -210,9 +210,9 @@ public class Path implements Iterable<Path.Segment> {
     }
 
     /**
-     * Segment represents a single segment as part of a longer, more complex path between points.
+     * Segment represents a single segment as part of a longer, more complex path between T.
      * Segments are immutable parts of a larger path that cannot be instantiated directly, and
-     * are created as part of larger paths by calling Path#extend(Point, double).
+     * are created as part of larger paths by calling Path#extend(T, double).
      */
     public class Segment {
 
@@ -227,12 +227,12 @@ public class Path implements Iterable<Path.Segment> {
         /**
          * The beginning of this segment.
          */
-        private final Point start;
+        private final T start;
 
         /**
          * The end of this segment.
          */
-        private final Point end;
+        private final T end;
 
         /**
          * The cost of travelling this segment.
@@ -245,12 +245,12 @@ public class Path implements Iterable<Path.Segment> {
          * @param start The starting point of this segment.
          * @param end   The ending point of this segment.
          * @param cost  The cost of travelling this segment.
-         * @throws NullPointerException     if either point is null.
+         * @throws NullPointerException     if either start or end is null.
          * @throws IllegalArgumentException if cost is infinite or NaN
          */
-        private Segment(Point start, Point end, double cost) {
+        private Segment(T start, T end, double cost) {
             if(start == null || end == null) {
-                throw new NullPointerException("Segments cannot have null points.");
+                throw new NullPointerException("Segments cannot have null elements.");
             }
             if(!Double.isFinite(cost)) {
                 throw new IllegalArgumentException("Segment cost may not be NaN or infinite.");
@@ -264,17 +264,16 @@ public class Path implements Iterable<Path.Segment> {
         }
 
         /**
-         * @return The beginning point of this segment.
+         * @return The beginning T of this segment.
          */
-        public Point getStart() {
-            // Note: Since Points are immutable, this isn't rep exposure.
+        public T getStart() {
             return this.start;
         }
 
         /**
-         * @return The ending point of this segment.
+         * @return The ending T of this segment.
          */
-        public Point getEnd() {
+        public T getEnd() {
             return this.end;
         }
 
@@ -303,10 +302,10 @@ public class Path implements Iterable<Path.Segment> {
             if(this == obj) {
                 return true;
             }
-            if(!(obj instanceof Segment)) {
+            if(!(obj instanceof Path<?>.Segment)) {
                 return false;
             }
-            Segment other = (Segment) obj;
+            Path<?>.Segment other = (Path<?>.Segment) obj;
             return other.getStart().equals(this.getStart())
                    && other.getEnd().equals(this.getEnd())
                    && (Double.compare(this.cost, other.cost) == 0);
