@@ -19,6 +19,7 @@ import java.io.InputStreamReader;
 import java.io.UncheckedIOException;
 import java.util.Map;
 import java.util.TreeSet;
+import java.awt.Point;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -137,9 +138,9 @@ public class TextInterfaceView {
      * @param end   The long name of the building at the end of the path.
      * @param path  The path to show to the user.
      */
-    public void showPath(String start, String end, Path path) {
+    public void showPath(String start, String end, Path<Point> path) {
         System.out.println("Path from " + start + " to " + end + ":");
-        for(Path.Segment pathSegment : path) {
+        for(Path<Point>.Segment pathSegment : path) {
             Direction dir = Direction.resolveDirection(pathSegment.getStart().getX(),
                                                        pathSegment.getStart().getY(),
                                                        pathSegment.getEnd().getX(),
